--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -5,6 +5,6 @@ WEBHOOK_FUNCTION=FALSE
 WEBHOOK_ID=YOUR_WEBHOOK_ID
 WEBHOOK_TOKEN=YOUR_WEBHOOK_TOKEN
 
-# You can fill this out, but it is only needed if you don't want to use the webhook function.
+# you can fill this out, but it is only needed if you don't want to use the webhook function.
 
 LOG_CHANNEL_ID=YOUR_LOG_CHANNEL_ID
