Added Emojis in .env

--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -8,3 +8,20 @@ WEBHOOK_TOKEN=YOUR_WEBHOOK_TOKEN
 # you can fill this out, but it is only needed if you don't want to use the webhook function.
 
 LOG_CHANNEL_ID=YOUR_LOG_CHANNEL_ID
+
+# if you want emojis to be used in the log, set the function to "TRUE" and fill in all emojis.
+
+USER_INFO_EMOJI=FALSE
+
+# if you have the emoji function turned off you can ignore the emoji's
+
+BUGHUNTER_LEVEL_1=YOUR_EMOJI_ID
+BUGHUNTER_LEVEL_2=YOUR_EMOJI_ID
+DISCORD_EMPLOYEE=YOUR_EMOJI_ID
+EARLY_SUPPORTER=YOUR_EMOJI_ID
+EARLY_VERIFIED_BOT_DEVELOPER=YOUR_EMOJI_ID
+HOUSE_BALANCE=YOUR_EMOJI_ID
+HOUSE_BRAVERY=YOUR_EMOJI_ID
+HOUSE_BRILLIANCE=YOUR_EMOJI_ID
+HYPESQUAD_EVENTS=YOUR_EMOJI_ID
+PARTNERED_SERVER_OWNER=YOUR_EMOJI_ID
