Member Join Server.json

--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -25,3 +25,10 @@ HOUSE_BRAVERY=YOUR_EMOJI_ID
 HOUSE_BRILLIANCE=YOUR_EMOJI_ID
 HYPESQUAD_EVENTS=YOUR_EMOJI_ID
 PARTNERED_SERVER_OWNER=YOUR_EMOJI_ID
+
+# Member Join Server Event Embed Info
+
+# set the color to "RANDOM" if you want a random color
+EMBED_COLOR_MEMBER_JOIN=#00FF00
+# set your embed title by member join server event
+EMBED_TITLE_MEMBER_JOIN=User Joined the Server
