Spelling error: EARLY_VERIFIED_DEVELOPER and Update .env
There was a small spelling mistake in the ENV on line 22

--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -19,7 +19,7 @@ BUGHUNTER_LEVEL_1=YOUR_EMOJI_ID
 BUGHUNTER_LEVEL_2=YOUR_EMOJI_ID
 DISCORD_EMPLOYEE=YOUR_EMOJI_ID
 EARLY_SUPPORTER=YOUR_EMOJI_ID
-VERIFIED_DEVELOPER=YOUR_EMOJI_ID
+EARLY_VERIFIED_DEVELOPER=YOUR_EMOJI_ID
 HOUSE_BALANCE=YOUR_EMOJI_ID
 HOUSE_BRAVERY=YOUR_EMOJI_ID
 HOUSE_BRILLIANCE=YOUR_EMOJI_ID
@@ -32,3 +32,10 @@ PARTNERED_SERVER_OWNER=YOUR_EMOJI_ID
 EMBED_COLOR_MEMBER_JOIN=#00FF00
 # set your embed title by member join server event
 EMBED_TITLE_MEMBER_JOIN=User Joined the Server
+
+# Member Leave Server Event Embed Info
+
+# set the color to "RANDOM" if you want a random color
+EMBED_COLOR_MEMBER_LEAVE=#FF0000
+# set your embed title by member join server event
+EMBED_TITLE_MEMBER_LEAVE=User Left the Server
