Added Member Kick Event Settings

--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -39,3 +39,10 @@ EMBED_TITLE_MEMBER_JOIN=User Joined the Server
 EMBED_COLOR_MEMBER_LEAVE=#FF0000
 # set your embed title by member join server event
 EMBED_TITLE_MEMBER_LEAVE=User Left the Server
+
+# Member Kicked from Server Event Embed Info
+
+# set the color to "RANDOM" if you want a random color
+EMBED_COLOR_MEMBER_KICKED=RED
+# set your embed title by member join server event
+EMBED_TITLE_MEMBER_KICKED=User was kicked
