Added Channel Create Settings

--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -46,3 +46,10 @@ EMBED_TITLE_MEMBER_LEAVE=User Left the Server
 EMBED_COLOR_MEMBER_KICKED=RED
 # set your embed title by member join server event
 EMBED_TITLE_MEMBER_KICKED=User was kicked
+
+# Channel Create Event Embed Info
+
+# set the color to "RANDOM" if you want a random color
+EMBED_COLOR_CHANNEL_CREATE=#0BF9EA
+# set your embed title by channel create event
+EMBED_TITLE_CHANNEL_CREATE=Channel Created
