Added Settings for Delete Channel Event

--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -53,3 +53,10 @@ EMBED_TITLE_MEMBER_KICKED=User was kicked
 EMBED_COLOR_CHANNEL_CREATE=#0BF9EA
 # set your embed title by channel create event
 EMBED_TITLE_CHANNEL_CREATE=Channel Created
+
+# Channel Delete Event Embed Info
+
+# set the color to "RANDOM" if you want a random color
+EMBED_COLOR_CHANNEL_DELETE=RED
+# set your embed title by channel create event
+EMBED_TITLE_CHANNEL_DELETE=Channel Deleted
