Added Settings for Role Create Event

--- a/Log Functions/.env
+++ b/Log Functions/.env
@@ -60,3 +60,10 @@ EMBED_TITLE_CHANNEL_CREATE=Channel Created
 EMBED_COLOR_CHANNEL_DELETE=RED
 # set your embed title by channel create event
 EMBED_TITLE_CHANNEL_DELETE=Channel Deleted
+
+# Role Create Event Embed Info
+
+# set the color to "RANDOM" if you want a random color
+EMBED_COLOR_ROLE_CREATE=GREEN
+# set your embed title by channel create event
+EMBED_TITLE_ROLE_CREATE=Role Created
